# zedpet

./: .gitignore  Makefile  README.md  RESEARCH.md  platformio.ini
claude-web/: .gitignore  README.md  claude_runner.py  pyproject.toml  server.py  session_store.py
claude-web/static/: app.js  index.html
claude-web/tests/: test_ask_endpoint.py  test_claude_runner.py  test_session_store.py
docs/: pitfalls.md
docs/superpowers/plans/: 2026-05-17-pet-render-actions-port-plan.md  2026-05-17-udp-host-gui-plan.md  2026-05-19-refactor.md  2026-05-19-weather-system-plan.md  2026-05-23-cardputer-claude-client.md  2026-05-23-claude-code-web-ui.md
docs/superpowers/specs/: 2026-05-17-pet-render-actions-port-design.md  2026-05-17-udp-host-gui-design.md  2026-05-19-weather-system-design.md  2026-05-23-cardputer-claude-client-design.md  2026-05-23-claude-code-web-ui-design.md  2026-05-24-imu-tilt-physics-design.md
host/: main.py  udp_client.py
src/: claude_client.cpp  claude_client.h  claude_client_parsing.cpp  claude_client_parsing.h  claude_ui.cpp  claude_ui.h  config.h  main.cpp  pet.cpp  pet.h  sprites.h  udp_server.cpp  udp_server.h  weather.cpp  weather.h
tests/host/: Makefile  test_claude_client_parsing.cpp
